# django-deep-link

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.md  CONTRIBUTING.rst  HISTORY.md  LICENSE  MANIFEST.in  Makefile  NOTES.md  README.md  env.example  manage.py  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.cfg  setup.py  tasks.py  tox.ini
django_deep_link/: admin.py  apps.py  models.py  settings.py  urls.py  views.py
django_deep_link/helpers/: __init__.py  ip.py  ua.py
django_deep_link/migrations/: 0001_initial.py  0002_auto_20210727_2022.py  0002_auto_20210728_1540.py  0002_visit.py  0003_app_ios_uri_scheme.py  0003_appstore_name.py  0003_auto_20210728_1622.py  0004_auto_20210728_1722.py  0005_auto_20210729_1413.py  0006_auto_20210729_1527.py  0007_auto_20210804_1511.py
django_deep_link/static/django_deep_link/js/: app.js  django_deep_link.js  scan.js
django_deep_link/static/django_deep_link/js/ace-builds/: ext-beautify.js  ext-code_lens.js  ext-elastic_tabstops_lite.js  ext-emmet.js  ext-keybinding_menu.js  ext-language_tools.js  ext-modelist.js  ext-options.js  ext-prompt.js  ext-searchbox.js  ext-settings_menu.js  ext-split.js  ext-static_highlight.js  ext-statusbar.js  ext-textarea.js  ext-themelist.js  keybinding-emacs.js  keybinding-vim.js  keybinding-vscode.js  mode-abap.js  mode-abc.js  mode-actionscript.js  mode-ada.js  mode-alda.js  mode-apache_conf.js  mode-apex.js  mode-applescript.js  mode-aql.js  mode-asciidoc.js  mode-asl.js  mode-assembly_x86.js  mode-autohotkey.js  mode-batchfile.js  mode-c9search.js  mode-c_cpp.js  mode-cirru.js  mode-clojure.js  mode-cobol.js  mode-coffee.js  mode-coldfusion.js  (+189 more)
django_deep_link/static/django_deep_link/js/ace-builds/snippets/: abc.js  actionscript.js  c_cpp.js  clojure.js  coffee.js  csound_document.js  csound_orchestra.js  css.js  dart.js  diff.js  django.js  drools.js  edifact.js  erlang.js  fsl.js  gobstones.js  graphqlschema.js  haml.js  haskell.js  html.js  java.js  javascript.js  jsoniq.js  jsp.js  liquid.js  lsl.js  lua.js  makefile.js  markdown.js  maze.js  perl.js  perl6.js  python.js  r.js  razor.js  rst.js  ruby.js  sh.js  snippets.js  sql.js  (+7 more)
django_deep_link/templates/django_deep_link/: app.html
django_project/: README.md  settings.py  urls.py
docs/: conf.py  index.rst  installation.rst  usage.rst
requirements/: requirements.txt
src/django_deep_link/: admin.py  dtos.py  mixins.py  models.py  settings.py  urls.py  views.py
src/django_deep_link/helpers/: ip.py  ua.py  url.py
src/django_deep_link/helpers/tests/: test_ip.py  test_ua.py
src/django_deep_link/migrations/: 0002_alter_visit_ip_address_alter_visit_ip_data_and_more.py  0003_alter_visit_ip_address_alter_visit_ip_data_and_more.py
src/django_deep_link/static/django_deep_link/js/: app.js  scan.js
tests/: README.md  settings.py  test_mixins.py  test_models.py  test_views.py  urls.py
tests/example/: urls.py
