[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django-deep-link"
description = "Simple app to get mobile app deep linking in place with basic tracking.."
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
  "ua-parser",
  "user-agents",
  "django-ipware",
  "requests",
]

dynamic = ["version", "readme"]
requires-python = ">=3.8"
authors = [{ name = "Tim Santor", email = "tsantor@xstudios.com" }]

[project.optional-dependencies]
dev = [
    "black",
    "pre-commit",
]

# [tool.setuptools.packages.find]
# # https://setuptools.pypa.io/en/latest/userguide/datafiles.html
# where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "django_deep_link.__version__"}
readme = {file = ["README.md", "HISTORY.md"], content-type = "text/markdown"}
