[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django-deep-link"
description = "Simple app to get mobile app deep linking in place with basic tracking.."
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = ["ua-parser", "user-agents", "django-ipware", "requests"]

dynamic = ["version", "readme"]
requires-python = ">=3.8"
authors = [{ name = "Tim Santor", email = "tsantor@xstudios.com" }]

[project.optional-dependencies]
dev = ["black", "pre-commit"]

[tool.setuptools.packages.find]
# https://setuptools.pypa.io/en/latest/userguide/datafiles.html
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "django_deep_link.__version__" }
readme = { file = ["README.md", "HISTORY.md"], content-type = "text/markdown" }


# ==== pytest ====
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ds=test.settings --reuse-db"
python_files = ["tests.py", "test_*.py"]
norecursedirs = ["node_modules"]
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]


# ==== Coverage ====
[tool.coverage.run]
include = ["*/django_deep_link/**"]
omit = ["*/migrations/*", "*/tests/*"]
plugins = ["django_coverage_plugin"]


# ==== black ====
[tool.black]
line-length = 119
target-version = ['py311']


# ==== isort ====
[tool.isort]
profile = "black"
line_length = 119
known_first_party = ["django_deep_link", "config"]
skip = ["venv/"]
skip_glob = ["**/migrations/*.py"]


# ==== flake8 ====
[tool.flake8]
extend-ignore = "E501"


# ==== mypy ====
[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[[tool.mypy.overrides]]
# Django migrations should not produce any errors:
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings.test"


# ==== PyLint ====
[tool.pylint.MASTER]
load-plugins = ["pylint_django", "pylint_celery"]
django-settings-module = "config.settings.local"

[tool.pylint.FORMAT]
max-line-length = 119

[tool.pylint."MESSAGES CONTROL"]
disable = ["missing-docstring", "invalid-name"]

[tool.pylint.DESIGN]
max-parents = 13

[tool.pylint.TYPECHECK]
generated-members = [
  "REQUEST",
  "acl_users",
  "aq_parent",
  "[a-zA-Z]+_set{1,2}",
  "save",
  "delete",
]
